--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
 		}
 	},
 	"extra": {
+		"branch-alias": {
+			"dev-main": "1.x.x-dev",
+			"dev-compatibility": "2.x.x-dev"
+		},
 		"typo3/cms": {
 			"cms-package-dir": "{$vendor-dir}/typo3/cms",
 			"extension-key": "category_types",
